# lumen

./: .gitignore  .vscodeignore  LUMEN_TRANSITION_MICROFRAME_BRIEF.md  README.md  package.json
.aloop/: PLAN.md  STATE.md
.aloop/prompts/: T2-host.md  T2-optical.md
.codex/agents/: aloop-high.toml  aloop-low.toml  aloop-med.toml  aloop-min.toml  aloop-review.toml  aloop-xhigh.toml
.github/workflows/: ci.yml
Architectural-plans/: README.md  Tech Stack.md  philosophy.md
Architectural-plans/AI/: ask-tutor.md
Architectural-plans/accounts/: lumen-account-and-sync.md
Architectural-plans/brand/: brand-assets.md
Architectural-plans/collaboration/: duo-programming.md  race-1v1.md  social-and-leaderboards.md
Architectural-plans/content-pipeline/: content-pipeline.md
contracts/: activity-manifest.v1.schema.json  io-test-cases.v1.schema.json  taxonomy.v1.json
engine/: Cargo.toml
engine/src/: compile.rs  esex.rs  lib.rs  main.rs  manifest.rs  process_guard.rs  protocol.rs  state.rs  storage.rs  testing.rs  workspace.rs
engine/tests/: console_runner.rs  content_validation.rs  esex_roundtrip.rs  io_testing.rs  manifest_validation.rs  protocol_v1.rs  protocol_v2.rs  protocol_v3.rs  protocol_v4.rs  protocol_v5.rs  protocol_v6.rs  protocol_v7.rs
extension/: tsconfig.json
extension/src/: extension.ts  (+14 more)
frontend/: 9eb07d58-8c57-41b1-8b67-72a7f2e55669.json  index.html  package.json  tsconfig.json  vite.config.ts
scripts/: build-package-assets.mjs  install-local.mjs  measure-page-load.mjs  measure-vscode-webview.mjs  perf-harness.mjs  verify-package.mjs
(+163 files in other folders)
