[package]
name = "lumen-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonschema = { version = "0.18", default-features = false, features = ["draft202012"] }
rusqlite = { version = "0.40", default-features = false, features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
wait-timeout = "0.2"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
